# pretix-video-header

./: .update-locales.sh  LICENSE  MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg
.github/workflows/: style.yml  tests.yml
pretix_video/: apps.py  signals.py  urls.py  views.py
pretix_video/templates/pretix_video/: settings.html
